--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,7 +71,7 @@ jobs:
             docker pull ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
             docker stop login-app || true
             docker rm login-app || true
-            docker run -d --name my-app -p 8080:80 ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
+            docker run -d --name login-app -p 8080:80 ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
 
       # ========================
       # 清理敏感文件（可选）
