--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -72,7 +72,7 @@ jobs:
             docker stop login-app || true
             docker rm login-app || true
             docker rmi ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }} || true
-            docker pull ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
+            docker pull --disable-content-trust ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
             docker run -d --name login-app -p 8080:80 ${{ env.DOCKER_HUB_REPO }}:${{ env.IMAGE_TAG }}
 
       # ========================
